--- a/MediMove/MediMove/Client/Pages/Admin/AdminEmployeeReport.razor
+++ b/MediMove/MediMove/Client/Pages/Admin/AdminEmployeeReport.razor
@@ -86,7 +86,7 @@
         }
     </div>
     <div>
-        <RadzenDataGrid TItem="GetEmployeesInMonthByHoursAndSalaryDTO.GetEmployeesInMonthByHoursAndSalaryRow" Data="@allPatients.Rows" AllowFiltering="true"
+        <RadzenDataGrid TItem="GetEmployeesInMonthByHoursAndSalaryDTO.GetEmployeesInMonthByHoursAndSalaryRow" Data="@allPatients?.Rows" AllowFiltering="true"
                     AllowSorting="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" SelectionMode="DataGridSelectionMode.Single" @bind-Value="@selectedEmployee">
             <Columns>
                 <RadzenDataGridColumn TItem="GetEmployeesInMonthByHoursAndSalaryDTO.GetEmployeesInMonthByHoursAndSalaryRow" Property="Id" Title="ID" />
