--- a/MediMove/MediMove/Client/Pages/Dispacher/DispatcherCreateTransport.razor
+++ b/MediMove/MediMove/Client/Pages/Dispacher/DispatcherCreateTransport.razor
@@ -592,7 +592,7 @@
             {
                 popup.Show("Patient added.");
             },
-            errors => popup.Show(errors)
+            errors => popup.ShowErrors(errors)
             );
         StateHasChanged();
     }
@@ -611,7 +611,7 @@
             {
                 popup.Show("Transport added.");
             },
-            errors => popup.Show(errors)
+            errors => popup.ShowErrors(errors)
             );
         
     }
