Updated styling and refactored creating requests.

--- a/MediMove/MediMove/Client/Pages/Component.razor
+++ b/MediMove/MediMove/Client/Pages/Component.razor
@@ -1,4 +1,12 @@
 ﻿@page "/"
-<div class="align-content-center"><h1>MediMove App</h1></div>
+<div class="container-fluid centered-text"><h1>MediMove App</h1></div>
 
 
+<style>
+    .centered-text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+</style>
