--- a/MediMove/MediMove/Client/Shared/AuthLayout.razor
+++ b/MediMove/MediMove/Client/Shared/AuthLayout.razor
@@ -1,13 +1,14 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="middle-box custom">
-    <h2>Welcome to MediMoveApp</h2>
+    <h2 class="text-light">Welcome to MediMoveApp</h2>
     @Body
 </div>
 
 <style>
     .custom {
         max-width: 350px;
+        background: #1f1f1f;
     }
      
 </style>
