--- a/MediMove/MediMove/Client/Pages/Dispacher/DispatcherDuties.razor
+++ b/MediMove/MediMove/Client/Pages/Dispacher/DispatcherDuties.razor
@@ -247,12 +247,10 @@
     {
         if (_selectedTeamId is not null && _selectedTransportId is not null)
         {
-            
-            var teamAndTransport = new SortedDictionary<int, int>();
-            teamAndTransport.Add((int)_selectedTransportId, (int)_selectedTeamId);
+
             _assignRequest = new AssignTeamsToTransportsRequest
             {
-                TransportsToTeams = teamAndTransport
+                    TransportsToTeams = new SortedDictionary<int, int> { { (int)_selectedTransportId, (int)_selectedTeamId } }
             };
             var message = await _TransportService.AddTeamToTransport(_assignRequest);
 
@@ -267,14 +265,13 @@
     {
         if (_selectedDriverId is not null && _selectedParamedicId is not null)
         {
-            var teams = new HashSet<CreateTeamsRequest.TeamInfo>();
-            teams.Add(new CreateTeamsRequest.TeamInfo((int)_selectedDriverId, (int)_selectedParamedicId));
+            
 
             _createTeamRequest = new CreateTeamsRequest
             {
                 Date = _selectedDate,
                 Shift = _selectedShift,
-                Teams = teams
+                Teams = new HashSet<CreateTeamsRequest.TeamInfo> { new((int)_selectedDriverId, (int)_selectedParamedicId) }
             };
             var message = await _TeamService.PostTeam(_createTeamRequest);
             popup.ShowErrorsOrMessage(message, "Team added.");
