--- a/MediMove/MediMove/Client/Pages/Dispacher/MainDispacher.razor
+++ b/MediMove/MediMove/Client/Pages/Dispacher/MainDispacher.razor
@@ -1,7 +1,16 @@
 ﻿@page "/dispacher/"
 
-<h3>MainDispacher</h3>
+<div class="container-fluid centered-text"><h1>Welcome back!</h1></div>
 
+
+<style>
+    .centered-text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+</style>
 @code {
 
 }
