Added popup after invalid login request.

--- a/MediMove/MediMove/Client/Pages/Login.razor
+++ b/MediMove/MediMove/Client/Pages/Login.razor
@@ -8,7 +8,7 @@
 
 <Popup @ref="popup" />
 
-<div class="row" style="background: black">
+<div class="row">
     <div class="col-12">
         @*<h4>Login</h4>*@
         <EditForm Model="dto" OnValidSubmit="HandleLogin">
