--- a/MediMove/MediMove/Client/Pages/Popup.razor
+++ b/MediMove/MediMove/Client/Pages/Popup.razor
@@ -51,15 +51,19 @@
         StateHasChanged();
     }
 
-    public void ShowErrorsOrMessage<T>(ErrorOr<T> result, string messageOnSuccess = "Changes saved successfully.") =>
-        result.Switch(
-            success => Show(messageOnSuccess),
-            errors => ShowErrors(errors)
-        );
-
-    public void ShowErrorsOrAssign<T>(ErrorOr<T> result, ref T values)
+    public bool ShowErrorsOrMessage<T>(ErrorOr<T> result, string messageOnSuccess = "Changes saved successfully.")
     {
-        if (result.IsError) ShowErrors(result.Errors);   
+        if (result.IsError) ShowErrors(result.Errors);
+        else Show(messageOnSuccess);
+
+        return result.IsError;
+    }
+
+    public bool ShowErrorsOrAssign<T>(ErrorOr<T> result, ref T values)
+    {
+        if (result.IsError) ShowErrors(result.Errors);
         else values = result.Value;
+
+        return result.IsError;
     }
 }
